--- a/env.example
+++ b/env.example
@@ -5,10 +5,13 @@ DATABASE_URL="file:./dev.db"
 NEXTAUTH_URL="http://localhost:3000"
 NEXTAUTH_SECRET="your-secret-key-here"
 
-# Google OAuth
+# Resend Email API (for order notifications)
+RESEND_API_KEY="your-resend-api-key-here"
+
+# Google OAuth (Optional - not currently used)
 GOOGLE_CLIENT_ID="your-google-client-id"
 GOOGLE_CLIENT_SECRET="your-google-client-secret"
 
-# Apple OAuth
+# Apple OAuth (Optional - not currently used)
 APPLE_ID="your-apple-id"
 APPLE_SECRET="your-apple-secret"
