--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "prisma": "^6.15.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "resend": "^6.5.2",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
